Added TowerPal Project

--- a/index.html
+++ b/index.html
@@ -189,19 +189,19 @@
 									<div class="stat-box">
 										<img src="images/code.png" alt="Lines of Codes" />
 										<div class="stat-box-info">
-											<strong><span class="counter-up">239371</span></strong><div>Lines of Codes</div>
+											<strong><span class="counter-up">392442</span></strong><div>Lines of Codes</div>
 										</div><!-- stat-box-info end -->
 									</div><!-- stat-box end -->
 									<div class="stat-box">
 										<img src="images/coffee.png" alt="Cup of Coffee" />
 										<div class="stat-box-info">
-											<strong><span class="counter-up">1248</span></strong><div>Cups of Coffee</div>
+											<strong><span class="counter-up">1744</span></strong><div>Cups of Coffee</div>
 										</div><!-- stat-box-info end -->
 									</div><!-- stat-box end -->
 									<div class="stat-box">
 										<img src="images/project.png" alt="Successful Projects" />
 										<div class="stat-box-info">
-											<strong><span class="counter-up">52</span></strong><div>Successful Projects</div>
+											<strong><span class="counter-up">59</span></strong><div>Successful Projects</div>
 										</div><!-- stat-box-info end -->
 									</div><!-- stat-box end -->
 									<div class="stat-box">
@@ -219,7 +219,7 @@
 									<div class="stat-box">
 										<img src="images/javascript.png" alt="Javascript knowledge" />
 										<div class="stat-box-info">
-											<strong><span class="counter-up">71</span>%</strong><div>Javascript Coding</div>
+											<strong><span class="counter-up">74</span>%</strong><div>Javascript Coding</div>
 										</div><!-- stat-box-info end -->
 									</div><!-- stat-box end -->
 								</div><!-- stat-box-wrapper end -->
@@ -246,7 +246,20 @@
 						<ul class="grid effect-8" id="grid">
 							<li>
 								<div class="portfolio-layer third-bg">
-								<a class="close" href="javascript:void(0)"></a>
+									<a class="close" href="javascript:void(0)"></a>
+									<div class="portfolio-inner-layer">
+										<div class="portfolio-layer-content">
+											<h4>TowerPal</h4>
+											<p>Keeping you informed on what is going on in and around your building</p>
+											<a class="bttn has-icon read-more" href="towerpal.html">Read More About This Project</a>
+										</div><!-- portfolio-layer-content end -->
+									</div><!-- portfolio-inner-layer end -->
+								</div><!-- portfolio-layer end -->
+								<img src="images/portfolio/towerpal-thumb.jpg" alt="TowerPal Website by Saman Rashidi" />
+							</li>
+							<li>
+								<div class="portfolio-layer third-bg">
+									<a class="close" href="javascript:void(0)"></a>
 									<div class="portfolio-inner-layer">
 										<div class="portfolio-layer-content">
 											<h4>Gaboja</h4>
@@ -259,7 +272,7 @@
 							</li>
 							<li>
 								<div class="portfolio-layer third-bg">
-								<a class="close" href="javascript:void(0)"></a>
+									<a class="close" href="javascript:void(0)"></a>
 									<div class="portfolio-inner-layer">
 										<div class="portfolio-layer-content">
 											<h4>Farnaz Yavarianfar</h4>
@@ -272,7 +285,7 @@
 							</li>
 							<li>
 								<div class="portfolio-layer third-bg">
-								<a class="close" href="javascript:void(0)"></a>
+									<a class="close" href="javascript:void(0)"></a>
 									<div class="portfolio-inner-layer">
 										<div class="portfolio-layer-content">
 											<h4>Edoramedia v5.0</h4>
@@ -285,7 +298,7 @@
 							</li>
 							<li>
 								<div class="portfolio-layer third-bg">
-								<a class="close" href="javascript:void(0)"></a>
+									<a class="close" href="javascript:void(0)"></a>
 									<div class="portfolio-inner-layer">
 										<div class="portfolio-layer-content">
 											<h4>Benita v3.0</h4>
@@ -298,7 +311,7 @@
 							</li>
 							<li>
 								<div class="portfolio-layer third-bg">
-								<a class="close" href="javascript:void(0)"></a>
+									<a class="close" href="javascript:void(0)"></a>
 									<div class="portfolio-inner-layer">
 										<div class="portfolio-layer-content">
 											<h4>Petrokabir Co.</h4>
@@ -311,7 +324,7 @@
 							</li>
 							<li>
 								<div class="portfolio-layer third-bg">
-								<a class="close" href="javascript:void(0)"></a>
+									<a class="close" href="javascript:void(0)"></a>
 									<div class="portfolio-inner-layer">
 										<div class="portfolio-layer-content">
 											<h4>Branford Training</h4>
@@ -324,7 +337,7 @@
 							</li>
 							<li>
 								<div class="portfolio-layer">
-								<a class="close" href="javascript:void(0)"></a>
+									<a class="close" href="javascript:void(0)"></a>
 									<div class="portfolio-inner-layer">
 										<div class="portfolio-layer-content">
 											<h4>Virtuleap</h4>
@@ -337,7 +350,7 @@
 							</li>
 							<li>
 								<div class="portfolio-layer second-bg">
-								<a class="close" href="javascript:void(0)"></a>
+									<a class="close" href="javascript:void(0)"></a>
 									<div class="portfolio-inner-layer">
 										<div class="portfolio-layer-content">
 											<h4>Battle Royale</h4>
@@ -350,7 +363,7 @@
 							</li>
 							<li>
 								<div class="portfolio-layer third-bg">
-								<a class="close" href="javascript:void(0)"></a>
+									<a class="close" href="javascript:void(0)"></a>
 									<div class="portfolio-inner-layer">
 										<div class="portfolio-layer-content">
 											<h4>Benita v1.0 &amp; v2.0</h4>
@@ -363,7 +376,7 @@
 							</li>
 							<li>
 								<div class="portfolio-layer">
-								<a class="close" href="javascript:void(0)"></a>
+									<a class="close" href="javascript:void(0)"></a>
 									<div class="portfolio-inner-layer">
 										<div class="portfolio-layer-content">
 											<h4>Primal MD</h4>
@@ -376,7 +389,7 @@
 							</li>
 							<li>
 								<div class="portfolio-layer second-bg">
-								<a class="close" href="javascript:void(0)"></a>
+									<a class="close" href="javascript:void(0)"></a>
 									<div class="portfolio-inner-layer">
 										<div class="portfolio-layer-content">
 											<h4>Sheo Sport</h4>
@@ -389,7 +402,7 @@
 							</li>
 							<li>
 								<div class="portfolio-layer third-bg">
-								<a class="close" href="javascript:void(0)"></a>
+									<a class="close" href="javascript:void(0)"></a>
 									<div class="portfolio-inner-layer">
 										<div class="portfolio-layer-content">
 											<h4>Magnihelp</h4>
@@ -402,7 +415,7 @@
 							</li>
 							<li>
 								<div class="portfolio-layer">
-								<a class="close" href="javascript:void(0)"></a>
+									<a class="close" href="javascript:void(0)"></a>
 									<div class="portfolio-inner-layer">
 										<div class="portfolio-layer-content">
 											<h4>Posh Vault</h4>
@@ -415,7 +428,7 @@
 							</li>
 							<li>
 								<div class="portfolio-layer">
-								<a class="close" href="javascript:void(0)"></a>
+									<a class="close" href="javascript:void(0)"></a>
 									<div class="portfolio-inner-layer">
 										<div class="portfolio-layer-content">
 											<h4>Emirates American Football League</h4>
@@ -428,7 +441,7 @@
 							</li>
 							<li>
 								<div class="portfolio-layer second-bg">
-								<a class="close" href="javascript:void(0)"></a>
+									<a class="close" href="javascript:void(0)"></a>
 									<div class="portfolio-inner-layer">
 										<div class="portfolio-layer-content">
 											<h4>Line Info</h4>
@@ -441,7 +454,7 @@
 							</li>
 							<li>
 								<div class="portfolio-layer half-text no-bg">
-								<a class="close" href="javascript:void(0)"></a>
+									<a class="close" href="javascript:void(0)"></a>
 									<div class="portfolio-inner-layer">
 										<div class="portfolio-layer-content">
 											<h4>TFG Interactive Map</h4>
@@ -454,7 +467,7 @@
 							</li>
 							<li>
 								<div class="portfolio-layer third-bg">
-								<a class="close" href="javascript:void(0)"></a>
+									<a class="close" href="javascript:void(0)"></a>
 									<div class="portfolio-inner-layer">
 										<div class="portfolio-layer-content">
 											<h4>Zafar Optic v1.0</h4>
@@ -467,7 +480,7 @@
 							</li>
 							<li>
 								<div class="portfolio-layer">
-								<a class="close" href="javascript:void(0)"></a>
+									<a class="close" href="javascript:void(0)"></a>
 									<div class="portfolio-inner-layer">
 										<div class="portfolio-layer-content">
 											<h4>Edoramedia v3.0</h4>
@@ -480,7 +493,7 @@
 							</li>
 							<li>
 								<div class="portfolio-layer second-bg">
-								<a class="close" href="javascript:void(0)"></a>
+									<a class="close" href="javascript:void(0)"></a>
 									<div class="portfolio-inner-layer">
 										<div class="portfolio-layer-content">
 											<h4>The Axiom Team</h4>
@@ -493,7 +506,7 @@
 							</li>
 							<li>
 								<div class="portfolio-layer third-bg">
-								<a class="close" href="javascript:void(0)"></a>
+									<a class="close" href="javascript:void(0)"></a>
 									<div class="portfolio-inner-layer">
 										<div class="portfolio-layer-content">
 											<h4>SBFR</h4>
@@ -506,7 +519,7 @@
 							</li>
 							<li>
 								<div class="portfolio-layer">
-								<a class="close" href="javascript:void(0)"></a>
+									<a class="close" href="javascript:void(0)"></a>
 									<div class="portfolio-inner-layer">
 										<div class="portfolio-layer-content">
 											<h4>The Body Challenge</h4>
@@ -519,7 +532,7 @@
 							</li>
 							<li>
 								<div class="portfolio-layer second-bg">
-								<a class="close" href="javascript:void(0)"></a>
+									<a class="close" href="javascript:void(0)"></a>
 									<div class="portfolio-inner-layer">
 										<div class="portfolio-layer-content">
 											<h4>MonteCristo</h4>
@@ -532,7 +545,7 @@
 							</li>
 							<li>
 								<div class="portfolio-layer third-bg">
-								<a class="close" href="javascript:void(0)"></a>
+									<a class="close" href="javascript:void(0)"></a>
 									<div class="portfolio-inner-layer">
 										<div class="portfolio-layer-content">
 											<h4>Yuuma Agency</h4>
@@ -545,7 +558,7 @@
 							</li>
 							<li>
 								<div class="portfolio-layer">
-								<a class="close" href="javascript:void(0)"></a>
+									<a class="close" href="javascript:void(0)"></a>
 									<div class="portfolio-inner-layer">
 										<div class="portfolio-layer-content">
 											<h4>Dr. Mohammad Safaei</h4>
