added thebodychallenge 2.0 project

--- a/index.html
+++ b/index.html
@@ -245,6 +245,19 @@
 						<h3 class="inner-title website-icon">Websites</h3>
 						<ul class="grid effect-8" id="grid">
 							<li>
+								<div class="portfolio-layer second-bg">
+									<a class="close" href="javascript:void(0)"></a>
+									<div class="portfolio-inner-layer">
+										<div class="portfolio-layer-content">
+											<h4>The Body Challenge v2.0</h4>
+											<p>The Body Challenge is for anyone and everyone! It doesn't matter how "Out" of shape or "In" shape you are, the Transformation will be SHOCKING! Whether you want to lose fat, gain muscle, trim down or tone up, THE BODY CHALLENGE is for you!!!</p>
+											<a class="bttn has-icon read-more" href="the-body-challenge-2.html">Read More About This Project</a>
+										</div><!-- portfolio-layer-content end -->
+									</div><!-- portfolio-inner-layer end -->
+								</div><!-- portfolio-layer end -->
+								<img src="images/portfolio/thebodychallenge2-thumb.jpg" alt="The Body Challenge v2.0 Website by Saman Rashidi" />
+							</li>
+							<li>
 								<div class="portfolio-layer third-bg">
 									<a class="close" href="javascript:void(0)"></a>
 									<div class="portfolio-inner-layer">
@@ -258,7 +271,7 @@
 								<img src="images/portfolio/towerpal-thumb.jpg" alt="TowerPal Website by Saman Rashidi" />
 							</li>
 							<li>
-								<div class="portfolio-layer third-bg">
+								<div class="portfolio-layer">
 									<a class="close" href="javascript:void(0)"></a>
 									<div class="portfolio-inner-layer">
 										<div class="portfolio-layer-content">
@@ -271,7 +284,7 @@
 								<img src="images/portfolio/gaboja-thumb.jpg" alt="Gaboja Website by Saman Rashidi" />
 							</li>
 							<li>
-								<div class="portfolio-layer third-bg">
+								<div class="portfolio-layer second-bg">
 									<a class="close" href="javascript:void(0)"></a>
 									<div class="portfolio-inner-layer">
 										<div class="portfolio-layer-content">
@@ -297,7 +310,7 @@
 								<img src="images/portfolio/edoramedia5-thumb.jpg" alt="Edoramedia v5.0 Website by Saman Rashidi" />
 							</li>
 							<li>
-								<div class="portfolio-layer third-bg">
+								<div class="portfolio-layer">
 									<a class="close" href="javascript:void(0)"></a>
 									<div class="portfolio-inner-layer">
 										<div class="portfolio-layer-content">
@@ -310,7 +323,7 @@
 								<img src="images/portfolio/benita3-thumb.jpg" alt="Benita v3.0 Website by Saman Rashidi" />
 							</li>
 							<li>
-								<div class="portfolio-layer third-bg">
+								<div class="portfolio-layer second-bg">
 									<a class="close" href="javascript:void(0)"></a>
 									<div class="portfolio-inner-layer">
 										<div class="portfolio-layer-content">
@@ -522,13 +535,13 @@
 									<a class="close" href="javascript:void(0)"></a>
 									<div class="portfolio-inner-layer">
 										<div class="portfolio-layer-content">
-											<h4>The Body Challenge</h4>
+											<h4>The Body Challenge v1.0</h4>
 											<p>The Body Challenge is for anyone and everyone! It doesn't matter how "Out" of shape or "In" shape you are, the Transformation will be SHOCKING! Whether you want to lose fat, gain muscle, trim down or tone up, THE BODY CHALLENGE is for you!!!</p>
 											<a class="bttn has-icon read-more" href="the-body-challenge.html">Read More About This Project</a>
 										</div><!-- portfolio-layer-content end -->
 									</div><!-- portfolio-inner-layer end -->
 								</div><!-- portfolio-layer end -->
-								<img src="images/portfolio/thebodychallenge-thumb.jpg" alt="The Body Challenge Website by Saman Rashidi" />
+								<img src="images/portfolio/thebodychallenge-thumb.jpg" alt="The Body Challenge v1.0 Website by Saman Rashidi" />
 							</li>
 							<li>
 								<div class="portfolio-layer second-bg">
