--- a/the-body-challenge-2.html
+++ b/the-body-challenge-2.html
@@ -1,20 +1,20 @@
 <!DOCTYPE html>
 <html lang="en-GB">
     <head>
-        <title>:: Saman Rashidi ~ Portfolio ~ The Body Challenge v1.0 ::</title>
+        <title>:: Saman Rashidi ~ Portfolio ~ The Body Challenge v2.0 ::</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <meta name="description" content="I'm Saman Rashidi, a Senior Front-end Developer and The Body Challenge v1.0 website is one of my projects"/>
+        <meta name="description" content="I'm Saman Rashidi, a Senior Front-end Developer and The Body Challenge v2.0 website is one of my projects"/>
         <meta charset="UTF-8" />
         <meta name="author" content="Saman Rashidi" />
         <meta name="theme-color" content="#232323" />
         <meta property="og:locale" content="en_GB" />
         <meta property="og:type" content="website" />
-        <meta property="og:title" content="Saman Rashidi ~ Portfolio ~ The Body Challenge v1.0" />
-        <meta property="og:description" content="I'm Saman Rashidi, a Senior Front-end Developer and The Body Challenge v1.0 website is one of my projects" />
-        <meta property="og:url" content="http://www.samanrashidi.com/the-body-challenge.html" />
+        <meta property="og:title" content="Saman Rashidi ~ Portfolio ~ The Body Challenge v2.0" />
+        <meta property="og:description" content="I'm Saman Rashidi, a Senior Front-end Developer and The Body Challenge v2.0 website is one of my projects" />
+        <meta property="og:url" content="http://www.samanrashidi.com/the-body-challenge-2.html" />
         <meta property="og:site_name" content="Saman Rashidi" />
-        <meta property="og:image" content="images/portfolio/the-body-challenge/desktop.png" />
-        <link rel="alternate" href="http://www.samanrashidi.com/the-body-challenge.html" hreflang="en-gb" />
+        <meta property="og:image" content="images/portfolio/the-body-challenge-2/desktop.png" />
+        <link rel="alternate" href="http://www.samanrashidi.com/the-body-challenge-2.html" hreflang="en-gb" />
         <link rel="icon" type="image/png" href="favicon.png" />  
 
         <!-- CSS Files
@@ -42,8 +42,8 @@
 
 
             <div class="specific-portfolio" itemscope itemtype="http://schema.org/Website">
-                <div class="potfolio-banner" style="background-image:url(images/portfolio/the-body-challenge/banner.jpg)">
-                    <h1><div itemprop="name">The Body Challenge v1.0</div><span>by <strong itemprop="author">Saman Rashidi</strong></span></h1>
+                <div class="potfolio-banner" style="background-image:url(images/portfolio/the-body-challenge-2/banner.jpg)">
+                    <h1><div itemprop="name">The Body Challenge v2.0</div><span>by <strong itemprop="author">Saman Rashidi</strong></span></h1>
                     <a class="Arrow" href="javascript:void(0)" onClick="JavaScript:$('#footer').animatescroll({scrollSpeed:4800,easing:'easeInSine'})"></a>
                 </div><!-- portfolio-banner end -->
                 <div class="portfolio-content has-shape shape-4 has-slime-2">
@@ -51,7 +51,7 @@
                         <div class="reveal">
                             <div class="content-box">
                                 <div class="content-image left-aligned">
-                                    <img itemprop="image" src="images/portfolio/the-body-challenge/desktop.png" alt="The Body Challenge v1.0 Desktop Version Website" />
+                                    <img itemprop="image" src="images/portfolio/the-body-challenge-2/desktop.png" alt="The Body Challenge v2.0 Desktop Version Website" />
                                 </div><!-- content-image end -->
                                 <div class="content-text">
                                     <h6 itemprop="description"><span class="site-color">"</span> It doesn't matter how 'Out' of shape or 'In' shape you are, the Transformation will be shocking! <span class="site-color">"</span></h6>
@@ -68,7 +68,7 @@
                                     <h6><span class="site-color">"</span> Whether you want to lose fat, gain muscle, trim down or tone up, THE BODY CHALLENGE is for you <span class="site-color">"</span></h6>
                                 </div><!-- content-text end -->
                                 <div class="content-image right-aligned">
-                                    <img src="images/portfolio/the-body-challenge/tablet.png" alt="The Body Challenge v1.0 Tablet Version Website" />
+                                    <img src="images/portfolio/the-body-challenge-2/tablet.png" alt="The Body Challenge v2.0 Tablet Version Website" />
                                 </div><!-- content-image end -->
                                 <div class="clearFix"></div><!-- clearFix end -->
                             </div><!-- content-box end -->
@@ -79,17 +79,17 @@
                         <div class="reveal">
                             <div class="content-box">
                                 <div class="content-image center-aligned">
-                                    <img src="images/portfolio/the-body-challenge/mobile.png" alt="The Body Challenge v1.0 Mobile Version Website" />
+                                    <img src="images/portfolio/the-body-challenge-2/mobile.png" alt="The Body Challenge v2.0 Mobile Version Website" />
                                 </div><!-- content-image end -->
                                 <div class="content-text mobile">
-                                    <h6><span class="site-color">"</span> Their website is not built in responsive version but it will be shown great in all devices but you need to zoom-in sometimes! <span class="site-color">"</span></h6>
+                                    <h6><span class="site-color">"</span> Their website built in fully responsive version and perfect view in all devices<span class="site-color">"</span></h6>
                                 </div><!-- content-text end -->
                                 <div class="clearFix"></div><!-- clearFix end -->
                             </div><!-- content-box end -->
                         </div><!-- reveal end -->
 
                         <div class="button-holder center-aligned">
-                            <a itemprop="url" class="bttn has-icon web-icon" href="http://www.edoramediarepository.com/samanira/thebodychallenge/" target="_blank">Open This Project in Web</a>
+                            <a itemprop="url" class="bttn has-icon web-icon" href="http://www.thebodychallenge.me" target="_blank">Open This Project in Web</a>
                             <a class="bttn has-icon home-icon" href="index.html">Back to Home Page</a>
                         </div><!-- button-holder end -->
 
