added IGAMSC project

--- a/index.html
+++ b/index.html
@@ -245,6 +245,19 @@
 						<h3 class="inner-title website-icon">Websites</h3>
 						<ul class="grid effect-8" id="grid">
 							<li>
+								<div class="portfolio-layer">
+									<a class="close" href="javascript:void(0)"></a>
+									<div class="portfolio-inner-layer">
+										<div class="portfolio-layer-content">
+											<h4>IGAMSC</h4>
+											<p>Iran-Georgia Auto-Motor Sports Club (IGAMSC) is an Iranian company based in Georgia (Tbilisi), actively involved in the Motor Sports. Cooperating with “Rustavi International Motopark (RIM)”.</p>
+											<a class="bttn has-icon read-more" href="igamsc.html">Read More About This Project</a>
+										</div><!-- portfolio-layer-content end -->
+									</div><!-- portfolio-inner-layer end -->
+								</div><!-- portfolio-layer end -->
+								<img src="images/portfolio/igamsc-thumb.jpg" alt="IGAMSC Website by Saman Rashidi" />
+							</li>
+							<li>
 								<div class="portfolio-layer second-bg">
 									<a class="close" href="javascript:void(0)"></a>
 									<div class="portfolio-inner-layer">
