added zafaroptic store project

--- a/index.html
+++ b/index.html
@@ -245,6 +245,19 @@
 						<h3 class="inner-title website-icon">Websites</h3>
 						<ul class="grid effect-8" id="grid">
 							<li>
+								<div class="portfolio-layer third-bg">
+									<a class="close" href="javascript:void(0)"></a>
+									<div class="portfolio-inner-layer">
+										<div class="portfolio-layer-content">
+											<h4>ZafarOptic Store</h4>
+											<p>Zafar Optic as one of the core and leading companies in eyewear and optics business in Iran with a main shop and over 60 retail stores. Zafar Optic or Tehran Optic was established by Naser Yavarianfar in 1952</p>
+											<a class="bttn has-icon read-more" href="zafaroptic-store.html">Read More About This Project</a>
+										</div><!-- portfolio-layer-content end -->
+									</div><!-- portfolio-inner-layer end -->
+								</div><!-- portfolio-layer end -->
+								<img src="images/portfolio/zafaroptic-store-thumb.jpg" alt="ZafarOptic Store Website by Saman Rashidi" />
+							</li>
+							<li>
 								<div class="portfolio-layer">
 									<a class="close" href="javascript:void(0)"></a>
 									<div class="portfolio-inner-layer">
