--- a/index.html
+++ b/index.html
@@ -245,6 +245,19 @@
 						<h3 class="inner-title website-icon">Websites</h3>
 						<ul class="grid effect-8" id="grid">
 							<li>
+								<div class="portfolio-layer second-bg">
+									<a class="close" href="javascript:void(0)"></a>
+									<div class="portfolio-inner-layer">
+										<div class="portfolio-layer-content">
+											<h4>Esmamkoo</h4>
+											<p>You can order this book online by typing the name and gender of your sweetheart baby and get the printed version of the book at home</p>
+											<a class="bttn has-icon read-more" href="esmamkoo.html">Read More About This Project</a>
+										</div><!-- portfolio-layer-content end -->
+									</div><!-- portfolio-inner-layer end -->
+								</div><!-- portfolio-layer end -->
+								<img src="images/portfolio/esmamkoo-thumb.jpg" alt="Esmamkoo Website by Saman Rashidi" />
+							</li>
+							<li>
 								<div class="portfolio-layer third-bg">
 									<a class="close" href="javascript:void(0)"></a>
 									<div class="portfolio-inner-layer">
@@ -263,7 +276,7 @@
 									<div class="portfolio-inner-layer">
 										<div class="portfolio-layer-content">
 											<h4>IGAMSC</h4>
-											<p>Iran-Georgia Auto-Motor Sports Club (IGAMSC) is an Iranian company based in Georgia (Tbilisi), actively involved in the Motor Sports. Cooperating with “Rustavi International Motopark (RIM)”.</p>
+											<p>Iran-Georgia Auto-Motor Sports Club (IGAMSC) is an Iranian company based in Georgia (Tbilisi), actively involved in the Motor Sports. Cooperating with “Rustavi International Motopark (RIM)”</p>
 											<a class="bttn has-icon read-more" href="igamsc.html">Read More About This Project</a>
 										</div><!-- portfolio-layer-content end -->
 									</div><!-- portfolio-inner-layer end -->
@@ -816,7 +829,7 @@
 
 			<div id="footer" class="has-shape shape-4 center-aligned">
 				<div class="frame">
-					<a href="http://www.samanrashidi.com"><img src="images/logo.png" alt="Saman Rashidi Logo" /></a>
+					<a href="http://www.samanrashidi.com"><img src="images/logo.png" alt="SamanirA Logo" /></a>
 					<span>Copyright © <span class="current-year"></span> <a itemprop="url" href="http://www.samanrashidi.com">Saman Rashidi</a>. All rights reserved</span>
 				</div><!-- frame end -->
 			</div><!-- approach end -->
