--- a/esmamkoo.html
+++ b/esmamkoo.html
@@ -1,20 +1,20 @@
 <!DOCTYPE html>
 <html lang="en-GB">
     <head>
-        <title>:: Saman Rashidi ~ Portfolio ~ SBFR ::</title>
+        <title>:: Saman Rashidi ~ Portfolio ~ Esmamkoo ::</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <meta name="description" content="I'm Saman Rashidi, a Senior Front-end Developer and SBFR website is one of my projects"/>
+        <meta name="description" content="I'm Saman Rashidi, a Senior Front-end Developer and Esmamkoo website is one of my projects"/>
         <meta charset="UTF-8" />
         <meta name="author" content="Saman Rashidi" />
         <meta name="theme-color" content="#232323" />
         <meta property="og:locale" content="en_GB" />
         <meta property="og:type" content="website" />
-        <meta property="og:title" content="Saman Rashidi ~ Portfolio ~ SBFR" />
-        <meta property="og:description" content="I'm Saman Rashidi, a Senior Front-end Developer and SBFR website is one of my projects" />
-        <meta property="og:url" content="http://www.samanrashidi.com/sbfr.html" />
+        <meta property="og:title" content="Saman Rashidi ~ Portfolio ~ Esmamkoo" />
+        <meta property="og:description" content="I'm Saman Rashidi, a Senior Front-end Developer and Esmamkoo website is one of my projects" />
+        <meta property="og:url" content="http://www.samanrashidi.com/esmamkoo.html" />
         <meta property="og:site_name" content="Saman Rashidi" />
-        <meta property="og:image" content="images/portfolio/sbfr/desktop.png" />
-        <link rel="alternate" href="http://www.samanrashidi.com/sbfr.html" hreflang="en-gb" />
+        <meta property="og:image" content="images/portfolio/esmamkoo/desktop.png" />
+        <link rel="alternate" href="http://www.samanrashidi.com/esmamkoo.html" hreflang="en-gb" />
         <link rel="icon" type="image/png" href="favicon.png" />  
 
         <!-- CSS Files
@@ -42,8 +42,8 @@
 
 
             <div class="specific-portfolio" itemscope itemtype="http://schema.org/Website">
-                <div class="potfolio-banner" style="background-image:url(images/portfolio/sbfr/banner.jpg)">
-                    <h1><div itemprop="name">SBFR</div><span>by <strong itemprop="author">Saman Rashidi</strong></span></h1>
+                <div class="potfolio-banner" style="background-image:url(images/portfolio/esmamkoo/banner.jpg)">
+                    <h1><div itemprop="name">Esmamkoo</div><span>by <strong itemprop="author">Saman Rashidi</strong></span></h1>
                     <a class="Arrow" href="javascript:void(0)" onClick="JavaScript:$('#footer').animatescroll({scrollSpeed:4800,easing:'easeInSine'})"></a>
                 </div><!-- portfolio-banner end -->
                 <div class="portfolio-content has-shape shape-4 has-slime-2">
@@ -51,10 +51,10 @@
                         <div class="reveal">
                             <div class="content-box">
                                 <div class="content-image left-aligned">
-                                    <img itemprop="image" src="images/portfolio/sbfr/desktop.png" alt="SBFR Desktop Version Website" />
+                                    <img itemprop="image" src="images/portfolio/esmamkoo/desktop.png" alt="Esmamkoo Desktop Version Website" />
                                 </div><!-- content-image end -->
                                 <div class="content-text">
-                                    <h6 itemprop="description"><span class="site-color">"</span> Non-ferrous Metals Recovery Industries Company is one of the most prestigious companies in precious metals in Iran <span class="site-color">"</span></h6>
+                                    <h6 itemprop="description"><span class="site-color">"</span> You can order this book online by typing the name and gender of your sweetheart baby and get the printed version of the book at home<span class="site-color">"</span></h6>
                                 </div><!-- content-text end -->
                                 <div class="clearFix"></div><!-- clearFix end -->
                             </div><!-- content-box end -->
@@ -65,10 +65,10 @@
                         <div class="reveal">
                             <div class="content-box">
                                 <div class="content-text tablet">
-                                    <h6><span class="site-color">"</span> Recycling from different kinds of catalysts, anode sludge, electronic waste and other materials used in the industry of the Iran <span class="site-color">"</span></h6>
+                                    <h6><span class="site-color">"</span> Simple, Beautiful and Perfect. Kids are going to love it <span class="site-color">"</span></h6>
                                 </div><!-- content-text end -->
                                 <div class="content-image right-aligned">
-                                    <img src="images/portfolio/sbfr/tablet.png" alt="SBFR Tablet Version Website" />
+                                    <img src="images/portfolio/esmamkoo/tablet.png" alt="Esmamkoo Tablet Version Website" />
                                 </div><!-- content-image end -->
                                 <div class="clearFix"></div><!-- clearFix end -->
                             </div><!-- content-box end -->
@@ -79,17 +79,17 @@
                         <div class="reveal">
                             <div class="content-box">
                                 <div class="content-image center-aligned">
-                                    <img src="images/portfolio/sbfr/mobile.png" alt="SBFR Mobile Version Website" />
+                                    <img src="images/portfolio/esmamkoo/mobile.png" alt="Esmamkoo Mobile Version Website" />
                                 </div><!-- content-image end -->
                                 <div class="content-text mobile">
-                                    <h6><span class="site-color">"</span> Their website is not built in responsive version but it will be shown great in all devices but you need to zoom-in sometimes! <span class="site-color">"</span></h6>
+                                    <h6><span class="site-color">"</span> Esmamkoo website built in responsive version suitable for all devices such as Tablet, Mobile and &hellip; <span class="site-color">"</span></h6>
                                 </div><!-- content-text end -->
                                 <div class="clearFix"></div><!-- clearFix end -->
                             </div><!-- content-box end -->
                         </div><!-- reveal end -->
 
                         <div class="button-holder center-aligned">
-                            <a itemprop="url" class="bttn has-icon web-icon" href="http://www.sbfr.ir/" target="_blank">Open This Project in Web</a>
+                            <a itemprop="url" class="bttn has-icon web-icon" href="http://www.esmamkoo.com" target="_blank">Open This Project in Web</a>
                             <a class="bttn has-icon home-icon" href="index.html">Back to Home Page</a>
                         </div><!-- button-holder end -->
 
@@ -127,7 +127,7 @@ sr.reveal('.reveal');
 
 var thisYear = new Date().getFullYear();
 $('.current-year').html(thisYear);
-</script> 
+</script>    
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -137,6 +137,6 @@ $('.current-year').html(thisYear);
   ga('create', 'UA-59994206-1', 'auto');
   ga('send', 'pageview');
 
-</script>     
+</script>  
     </body>
 </html>
