--- a/tfg-map.html
+++ b/tfg-map.html
@@ -109,7 +109,7 @@
 
             <div id="footer" class="has-shape shape-4 center-aligned">
                 <div class="frame">
-                    <a href="http://www.samanrashidi.com"><img src="images/logo.png" alt="" /></a>
+                    <a href="http://www.samanrashidi.com"><img src="images/logo.png" alt="SamanirA Logo" /></a>
                     <span>Copyright © <span class="current-year"></span> <a href="http://www.samanrashidi.com">Saman Rashidi</a>. All rights reserved</span>
                 </div><!-- frame end -->
             </div><!-- approach end -->
