added flexpass project

--- a/index.html
+++ b/index.html
@@ -245,6 +245,19 @@
 						<h3 class="inner-title website-icon">Websites</h3>
 						<ul class="grid effect-8" id="grid">
 							<li>
+								<div class="portfolio-layer">
+									<a class="close" href="javascript:void(0)"></a>
+									<div class="portfolio-inner-layer">
+										<div class="portfolio-layer-content">
+											<h4>Flexpass</h4>
+											<p>Flexpass curated an elite list of fitness classes in Manila and Asia. Empowering you with an unlimited variety of classes from Yoga to Kickboxing, Spinning to Dance, CrossFit to Pilates.</p>
+											<a class="bttn has-icon read-more" href="flexpass.html">Read More About This Project</a>
+										</div><!-- portfolio-layer-content end -->
+									</div><!-- portfolio-inner-layer end -->
+								</div><!-- portfolio-layer end -->
+								<img src="images/portfolio/flexpass-thumb.jpg" alt="Flexpass Website by Saman Rashidi" />
+							</li>
+							<li>
 								<div class="portfolio-layer second-bg">
 									<a class="close" href="javascript:void(0)"></a>
 									<div class="portfolio-inner-layer">
