added makianjav project

--- a/index.html
+++ b/index.html
@@ -245,6 +245,19 @@
 						<h3 class="inner-title website-icon">Websites</h3>
 						<ul class="grid effect-8" id="grid">
 							<li>
+								<div class="portfolio-layer third-bg">
+									<a class="close" href="javascript:void(0)"></a>
+									<div class="portfolio-inner-layer">
+										<div class="portfolio-layer-content">
+											<h4>MakianJavAria</h4>
+											<p>Makian Jav Aria Co has been established in 2014 by experienced managers in poultry industry and the company has put its priority to become responsible for the satisfaction of its customers</p>
+											<a class="bttn has-icon read-more" href="makianjav.html">Read More About This Project</a>
+										</div><!-- portfolio-layer-content end -->
+									</div><!-- portfolio-inner-layer end -->
+								</div><!-- portfolio-layer end -->
+								<img src="images/portfolio/makianjav-thumb.jpg" alt="MakianJavAria Website by Saman Rashidi" />
+							</li>
+							<li>
 								<div class="portfolio-layer">
 									<a class="close" href="javascript:void(0)"></a>
 									<div class="portfolio-inner-layer">
