--- a/samanira/index.html
+++ b/samanira/index.html
@@ -29,8 +29,6 @@
         <script type="text/javascript" src="../js/jquery.min.js"></script>
         <script type="text/javascript" src="../js/core.plugins.js"></script>
         <script type="text/javascript" src="../js/samanira.js"></script>
-        <script type="text/javascript" src="../js/reveal.js"></script>
-        <script type="text/javascript" src="../js/animate.js"></script>
 
         <!--[if lt IE 9]>
         <link rel="stylesheet" type="text/css" media="screen" href="css/ie.css" />
@@ -3380,24 +3378,13 @@
             <div id="footer" class="has-shape shape-4 center-aligned">
                 <div class="frame">
                     <a href="http://www.samanrashidi.com"><img src="../images/logo.png" alt="" /></a>
-                    <span>Copyright © <span class="current-year"></span> <a href="http://www.samanrashidi.com">Saman Rashidi</a>. All rights reserved</span>
+                    <span>Copyright © 2017 <a href="http://www.samanrashidi.com">Saman Rashidi</a>. All rights reserved</span>
                 </div><!-- frame end -->
             </div><!-- approach end -->
 
 <!-- ======== Footer End ======== -->
 
         </div><!-- wrapper end -->     
-<script type="text/javascript">
-// Reveal Content
-
-window.sr = ScrollReveal();
-sr.reveal('.reveal');
-
-// Get the Current Year
-
-var thisYear = new Date().getFullYear();
-$('.current-year').html(thisYear);
-</script>
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
