--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 								<h1>About Me</h1>
 							</div><!-- section-title end -->
 							<div class="section-content">
-								<p class="justified"><span itemprop="description">My name is <strong itemprop="name">Saman Rashidi</strong>, I’m from Tehran, <strong itemprop="nationality">Iran</strong>, and I specialize in <strong>Web Design and Front-end Web Development</strong>. I hold 4 CIW certification from MFTN (Mojtama Fani Tehran), and have gained <strong itemprop="award">more than 8500 points and 100 achievements in <a target="_blank" href="http://www.teamtreehouse.com/samanrashidi">TeamTreeHouse</a> Website</strong>. I started working with <a itemprop="worksFor" target="_blank" href="http://www.edoramedia.com">Edoramedia</a> digital solution company since October 2014 as a front-end developer.</span> Before entering a career in creating web pages, I received my bachelor’s degree in Biology and shortly became highly interested in the science known as Neuromarketing. Due to my passion and education, I pursued the Marketing Management certification and worked with Dr. Mohsen Oftadehal (Cognitive Scientist) to concentrate on advertising skills approached using biological methods. Today I am a <strong itemprop="jobTitle">Senior Front-end Developer</strong> in Edoramedia focus on designing creative and appealing websites, attractive and clean to the viewers’ eyes, and skillfully developed on the back-end.I am the owner of <a itemprop="owns" href="samanira/index.html">SamanirA framework</a> with my partner <a target="_blank" href="http://www.samirasalimian.com">Samira Salimian</a> to make a better and simpler framework for front-end developers.</p>
+								<p class="justified"><span itemprop="description">My name is <strong itemprop="name">Saman Rashidi</strong>, I’m a persian who lives in Tbilisi, <strong itemprop="nationality">Georgia</strong>, and I specialize in <strong>Web Design and Front-end Web Development</strong>. I hold 4 CIW certification from MFTN (Mojtama Fani Tehran), and have gained <strong itemprop="award">more than 11000 points and 100 achievements in <a target="_blank" href="http://www.teamtreehouse.com/samanrashidi">TeamTreeHouse</a> Website</strong>. I started working with <a itemprop="worksFor" target="_blank" href="http://www.edoramedia.com">Edoramedia</a> digital solution company since October 2014 as a front-end developer.</span> Before entering a career in creating web pages, I received my bachelor’s degree in Biology and shortly became highly interested in the science known as Neuromarketing. Due to my passion and education, I pursued the Marketing Management certification and worked with Dr. Mohsen Oftadehal (Cognitive Scientist) to concentrate on advertising skills approached using biological methods. Today I am a <strong itemprop="jobTitle">Senior Front-end Developer</strong> in Edoramedia focus on designing creative and appealing websites, attractive and clean to the viewers’ eyes, and skillfully developed on the back-end. I am the owner of <a itemprop="owns" href="samanira/index.html">SamanirA framework</a> with my partner <a target="_blank" href="http://www.samirasalimian.com">Samira Salimian</a> to make a better and simpler framework for front-end developers.</p>
 							</div><!-- section-content end -->
 							<div class="pagination">
 								<div class="pagination-content">
@@ -189,19 +189,19 @@
 									<div class="stat-box">
 										<img src="images/code.png" alt="Lines of Codes" />
 										<div class="stat-box-info">
-											<strong><span class="counter-up">392442</span></strong><div>Lines of Codes</div>
+											<strong><span class="counter-up">412377</span></strong><div>Lines of Codes</div>
 										</div><!-- stat-box-info end -->
 									</div><!-- stat-box end -->
 									<div class="stat-box">
 										<img src="images/coffee.png" alt="Cup of Coffee" />
 										<div class="stat-box-info">
-											<strong><span class="counter-up">1744</span></strong><div>Cups of Coffee</div>
+											<strong><span class="counter-up">2041</span></strong><div>Cups of Coffee</div>
 										</div><!-- stat-box-info end -->
 									</div><!-- stat-box end -->
 									<div class="stat-box">
 										<img src="images/project.png" alt="Successful Projects" />
 										<div class="stat-box-info">
-											<strong><span class="counter-up">59</span></strong><div>Successful Projects</div>
+											<strong><span class="counter-up">61</span></strong><div>Successful Projects</div>
 										</div><!-- stat-box-info end -->
 									</div><!-- stat-box end -->
 									<div class="stat-box">
@@ -219,7 +219,7 @@
 									<div class="stat-box">
 										<img src="images/javascript.png" alt="Javascript knowledge" />
 										<div class="stat-box-info">
-											<strong><span class="counter-up">74</span>%</strong><div>Javascript Coding</div>
+											<strong><span class="counter-up">76</span>%</strong><div>Javascript Coding</div>
 										</div><!-- stat-box-info end -->
 									</div><!-- stat-box end -->
 								</div><!-- stat-box-wrapper end -->
@@ -766,8 +766,8 @@
 								<h3 class="inner-title information-icon">Contact Information</h3>
 								<div class="contact-info">
 									<ul>
-										<li><strong class="mobile-icon">Mobile Number:</strong> <a itemprop="contactPoint" itemprop="telephone" href="tel:+989128996990">+989128996990</a></li>
-										<li><strong class="navigation-icon">Address:</strong> <a target="_blank" href="https://www.google.com/maps/@32.4943981,54.451405,6z">Tehran, Iran.</a></li>
+										<li><strong class="mobile-icon">Mobile Number:</strong> <a itemprop="contactPoint" itemprop="telephone" href="tel:+995599399705">+995 599 399 705</a> - <a itemprop="contactPoint" itemprop="telephone" href="tel:+989128996990">+98912 899 699 0</a></li>
+										<li><strong class="navigation-icon">Address:</strong> <a target="_blank" href="https://www.google.com/maps/@32.4943981,54.451405,6z">Tbilisi, Georgia.</a></li>
 										<li><strong class="email-icon">Email Address:</strong> <a href="mailto:me@samanrashidi.com"><span itemprop="email">Me@samanrashidi.com</span></a></li>
 										<li class="socials">
 											<a class="social-icon telegram" target="_blank" href="https://telegram.me/samanrashidii"></a>
