updated some items and removed samanira page

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 								<h1>About Me</h1>
 							</div><!-- section-title end -->
 							<div class="section-content">
-								<p class="justified"><span itemprop="description">My name is <strong itemprop="name">Saman Rashidi</strong>, I’m a persian who lives in Tbilisi, <strong itemprop="nationality">Georgia</strong>, and I specialize in <strong>Web Design and Front-end Web Development</strong>. I hold 4 CIW certification from MFTN (Mojtama Fani Tehran), and have gained <strong itemprop="award">more than 11000 points and 100 achievements in <a target="_blank" href="http://www.teamtreehouse.com/samanrashidi">TeamTreeHouse</a> Website</strong>. I started working with <a itemprop="worksFor" target="_blank" href="http://www.edoramedia.com">Edoramedia</a> digital solution company since October 2014 as a front-end developer.</span> Before entering a career in creating web pages, I received my bachelor’s degree in Biology and shortly became highly interested in the science known as Neuromarketing. Due to my passion and education, I pursued the Marketing Management certification and worked with Dr. Mohsen Oftadehal (Cognitive Scientist) to concentrate on advertising skills approached using biological methods. Today I am a <strong itemprop="jobTitle">Senior Front-end Developer</strong> in Edoramedia focus on designing creative and appealing websites, attractive and clean to the viewers’ eyes, and skillfully developed on the back-end. I am the owner of <a itemprop="owns" href="samanira/index.html">SamanirA framework</a> with my partner <a target="_blank" href="http://www.samirasalimian.com">Samira Salimian</a> to make a better and simpler framework for front-end developers.</p>
+								<p class="justified"><span itemprop="description">My name is <strong itemprop="name">Saman Rashidi</strong>, I’m a persian who lives in Tbilisi, <strong itemprop="nationality">Georgia</strong>, and I specialize in <strong>Web Design and Front-end Web Development</strong>. I hold 4 CIW certification from MFT, and have gained <strong itemprop="award">more than 11000 points and 100 achievements in <a target="_blank" href="http://www.teamtreehouse.com/samanrashidi">TeamTreeHouse</a> Website</strong>. I started working with <a itemprop="worksFor" target="_blank" href="http://www.edoramedia.com">Edoramedia</a> digital solution company since October 2014 as a front-end developer.</span> Before entering a career in creating web pages, I received my bachelor’s degree in Biology and shortly became highly interested in the science known as Neuromarketing. Due to my passion and education, I pursued the Marketing Management certification and worked with Dr. Mohsen Oftadehal (Cognitive Scientist) to concentrate on advertising skills approached using biological methods. Today I am a <strong itemprop="jobTitle">Senior Front-end Developer</strong> in Edoramedia focus on designing creative and appealing websites, attractive and clean to the viewers’ eyes, and skillfully developed on the back-end. I am the owner of <a itemprop="owns" href="http://www.samanira.com" target="_blank">SamanirA framework</a> with my partner <a target="_blank" href="http://www.samirasalimian.com">Samira Salimian</a> to make a better and simpler framework for front-end developers.</p>
 							</div><!-- section-content end -->
 							<div class="pagination">
 								<div class="pagination-content">
@@ -168,7 +168,7 @@
 						<div class="half-box reveal right-aligned has-large-right-padding">
 							<img class="samanira-main-logo" src="images/samanira.png" alt="Samanira Logo" />
 							<br />
-							<a class="bttn bounce site-2" href="samanira/index.html">Read More</a>
+							<a class="bttn bounce site-2" href="http://www.samanira.com" target="_blank">Read More</a>
 						</div><!-- half-box end -->
 						<div class="half-box reveal left-aligned">
 							<h4>Owner of <strong class="site-color">SamanirA</strong> Framework</h4>
@@ -189,19 +189,19 @@
 									<div class="stat-box">
 										<img src="images/code.png" alt="Lines of Codes" />
 										<div class="stat-box-info">
-											<strong><span class="counter-up">412377</span></strong><div>Lines of Codes</div>
+											<strong><span class="counter-up">414377</span></strong><div>Lines of Codes</div>
 										</div><!-- stat-box-info end -->
 									</div><!-- stat-box end -->
 									<div class="stat-box">
 										<img src="images/coffee.png" alt="Cup of Coffee" />
 										<div class="stat-box-info">
-											<strong><span class="counter-up">2041</span></strong><div>Cups of Coffee</div>
+											<strong><span class="counter-up">2114</span></strong><div>Cups of Coffee</div>
 										</div><!-- stat-box-info end -->
 									</div><!-- stat-box end -->
 									<div class="stat-box">
 										<img src="images/project.png" alt="Successful Projects" />
 										<div class="stat-box-info">
-											<strong><span class="counter-up">61</span></strong><div>Successful Projects</div>
+											<strong><span class="counter-up">62</span></strong><div>Successful Projects</div>
 										</div><!-- stat-box-info end -->
 									</div><!-- stat-box end -->
 									<div class="stat-box">
@@ -219,7 +219,7 @@
 									<div class="stat-box">
 										<img src="images/javascript.png" alt="Javascript knowledge" />
 										<div class="stat-box-info">
-											<strong><span class="counter-up">76</span>%</strong><div>Javascript Coding</div>
+											<strong><span class="counter-up">77</span>%</strong><div>Javascript Coding</div>
 										</div><!-- stat-box-info end -->
 									</div><!-- stat-box end -->
 								</div><!-- stat-box-wrapper end -->
