--- a/page-500.html
+++ b/page-500.html
@@ -3,7 +3,7 @@
     <head>
         <title>:: Saman Rashidi ~ Internal Server Error (error 500) ::</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <meta name="description" content="My Personal Website. I'm a Senior Front-end Developer Working in Edoramedia Company"/>
+        <meta name="description" content="My name is Saman and I specialize in Front-end Web Development. I started working with Edoramedia company since October 2014 and the owner of SamanirA framework"/>
         <meta charset="UTF-8" />
         <meta name="author" content="Saman Rashidi" />
         <meta name="theme-color" content="#232323" />
@@ -19,10 +19,10 @@
 
         <!-- CSS Files
         ================================================== -->
-        <link rel="stylesheet" type="text/css" href="css/framework.css" media="screen" />
-        <link rel="stylesheet" type="text/css" href="css/saman.css" media="screen" />
-        <link rel="stylesheet" type="text/css" href="css/style.css" media="screen" />
-        <link rel="stylesheet" type="text/css" href="css/media.css" media="screen" />
+        <link rel="stylesheet" type="text/css" href="/css/framework.css" media="screen" />
+        <link rel="stylesheet" type="text/css" href="/css/saman.css" media="screen" />
+        <link rel="stylesheet" type="text/css" href="/css/style.css" media="screen" />
+        <link rel="stylesheet" type="text/css" href="/css/media.css" media="screen" />
 
         <!-- Javascript Files
         ================================================== -->
