--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
 						<h3 class="inner-title website-icon">Websites</h3>
 						<ul class="grid effect-8" id="grid">
 							<li>
-								<div class="portfolio-layer third-bg">
+								<div class="portfolio-layer second-bg">
 									<a class="close" href="javascript:void(0)"></a>
 									<div class="portfolio-inner-layer">
 										<div class="portfolio-layer-content">
