fixed some issues

--- a/index.html
+++ b/index.html
@@ -746,7 +746,7 @@
 										<li class="socials">
 											<a class="social-icon telegram" target="_blank" href="https://telegram.me/samanrashidii"></a>
 											<a class="social-icon github" target="_blank" href="https://github.com/samanrashidii"></a>
-											<a class="social-icon linkedin" target="_blank" href="https://www.linkedin.com/in/samanrsh"></a>
+											<a class="social-icon linkedin" target="_blank" href="https://www.linkedin.com/in/samanrashidii"></a>
 											<a class="social-icon instagram" target="_blank" href="https://www.instagram.com/samaniraa/"></a>	
 											<a class="social-icon googleplus" target="_blank" href="https://plus.google.com/109638627387819515843"></a>
 											<a class="social-icon facebook" target="_blank" href="https://www.facebook.com/Samanrashidii"></a>	
