added more social links

--- a/index.html
+++ b/index.html
@@ -727,16 +727,21 @@
 								<h3 class="inner-title information-icon">Contact Information</h3>
 								<div class="contact-info">
 									<ul>
-										<li><strong class="mobile-icon">Mobile Number:</strong> <a itemprop="contactPoint" itemprop="telephone" href="tel:+995599399705">+995 599 399 705</a> - <a itemprop="contactPoint" itemprop="telephone" href="tel:+989128996990">+98912 899 699 0</a></li>
+										<li><strong class="mobile-icon">Mobile Number:</strong> <a itemprop="contactPoint" itemprop="telephone" href="tel:+995599399705">+995 599 399 705</a> | <a itemprop="contactPoint" itemprop="telephone" href="tel:+989128996990">+98912 899 699 0</a></li>
 										<li><strong class="navigation-icon">Address:</strong> <a target="_blank" href="https://www.google.com/maps/@32.4943981,54.451405,6z">Tbilisi, Georgia.</a></li>
 										<li><strong class="email-icon">Email Address:</strong> <a href="mailto:me@samanrashidi.com"><span itemprop="email">Me@samanrashidi.com</span></a></li>
 										<li class="socials">
 											<a class="social-icon telegram" target="_blank" href="https://telegram.me/samanrashidii"></a>
 											<a class="social-icon github" target="_blank" href="https://github.com/samanrashidii"></a>
 											<a class="social-icon linkedin" target="_blank" href="https://www.linkedin.com/in/samanrashidii"></a>
-											<a class="social-icon instagram" target="_blank" href="https://www.instagram.com/samaniraa/"></a>	
+											<a class="social-icon instagram" target="_blank" href="https://www.instagram.com/samanrashidii"></a>	
 											<a class="social-icon googleplus" target="_blank" href="https://plus.google.com/109638627387819515843"></a>
-											<a class="social-icon facebook" target="_blank" href="https://www.facebook.com/Samanrashidii"></a>	
+											<a class="social-icon facebook" target="_blank" href="https://www.facebook.com/samanrashidii"></a>
+											<a class="social-icon tumblr" target="_blank" href="https://samanrashidii.tumblr.com"></a>
+											<a class="social-icon twitter" target="_blank" href="https://twitter.com/samanrashidii"></a>
+											<a class="social-icon pinterest" target="_blank" href="https://www.pinterest.com/samanrashidii"></a>
+											<a class="social-icon soundcloud" target="_blank" href="https://soundcloud.com/samanrashidii"></a>
+											<a class="social-icon tripadvisor" target="_blank" href="https://www.tripadvisor.com/Profile/SamanRashidii"></a>
 										</li>
 									</ul>
 								</div><!-- contact-info end -->
