fixed googlemap sensor issue

--- a/vue/public/index.html
+++ b/vue/public/index.html
@@ -41,7 +41,7 @@
       <div id="app"></div>
     </div>
     <!-- built files will be auto injected -->
-  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDJjx-gcQgzoZJdu-M9K-lzI_RB4UJN8Xo&amp;v=3.exp&amp;sensor=false"></script>
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDJjx-gcQgzoZJdu-M9K-lzI_RB4UJN8Xo&amp;v=3.exp"></script>
   <script type="application/ld+json">
     {
       "@context": "http://schema.org",
