google map removed and made project lighter

--- a/vue/public/index.html
+++ b/vue/public/index.html
@@ -40,7 +40,6 @@
       <div id="app"></div>
     </div>
     <!-- built files will be auto injected -->
-  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDJjx-gcQgzoZJdu-M9K-lzI_RB4UJN8Xo&amp;v=3.exp"></script>
   <script type="application/ld+json">
     {
       "@context": "http://schema.org",
@@ -48,7 +47,7 @@
       "@type": "WebSite",
       "url": "http://www.samanrashidi.com/",
       "name": "Saman Rashidi",
-      "description": "Saman Rashidi is a Senior Front-end Developer Working in Edoramedia Digital Company"
+      "description": "Saman Rashidi is a senior Front-end developer"
     }
   </script>
   <script>
