fixed url issue

--- a/vue/public/index.html
+++ b/vue/public/index.html
@@ -16,15 +16,15 @@
 
     <!-- CSS Files
     	================================================== -->
-		<link rel="stylesheet" type="text/css" href="css/saman.css" media="screen" />
-		<link rel="stylesheet" type="text/css" href="css/style.css" media="screen" />
-		<link rel="stylesheet" type="text/css" href="css/media.css" media="screen" />
+		<link rel="stylesheet" type="text/css" href="/css/saman.css" media="screen" />
+		<link rel="stylesheet" type="text/css" href="/css/style.css" media="screen" />
+		<link rel="stylesheet" type="text/css" href="/css/media.css" media="screen" />
 
 		<!-- Javascript Files
     	================================================== -->
-		<script src="js/jquery.min.js"></script>
-		<script src="js/saman.js"></script>
-		<script src="js/website.js"></script>
+		<script src="/js/jquery.min.js"></script>
+		<script src="/js/saman.js"></script>
+		<script src="/js/website.js"></script>
     
   </head>
   <body itemscope itemtype="http://www.schema.org/Person">
