--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
     <meta property="og:locale" content="en_GB" />
 		<meta property="og:type" content="website" />
 		<meta property="og:site_name" content="Saman Rashidi" />
-		<meta property="og:image" content="http://www.samanrashidi.com/images/logo.png" />
+		<meta property="og:image" content="http://www.samanrashidi.com/img/saman_rashidi.48968b0c.png" />
 		<link rel="alternate" href="http://www.samanrashidi.com/" hreflang="en-gb" />
     <link rel="icon" type="image/png" href="<%= BASE_URL %>favicon.png">
 
