fixed homepage background issue and added manifest and sw for pwa

--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,7 @@
 		<meta property="og:image" content="http://www.samanrashidi.com/img/saman_rashidi.48968b0c.png" />
 		<link rel="alternate" href="http://www.samanrashidi.com/" hreflang="en-gb" />
     <link rel="icon" type="image/png" href="<%= BASE_URL %>favicon.png">
+    <link rel="manifest" href="manifest.webmanifest">
 
 		<!-- Javascript Files
     	================================================== -->
